# cnake

./: CMakeCache.txt  CMakeLists.txt  snake
src/: main.c
src/keyboard/: input.c  input.h
